syntax="proto3";

package appointment_service;
option go_package="genproto/appointment_service";

import "google/protobuf/empty.proto";

service DoctorService {
  rpc Create(Doctor) returns (google.protobuf.Empty) {}
  rpc GetList(GetListDoctorsRequest) returns (GetListDoctorsResponse) {}
  rpc Get(DoctorId) returns (Doctor) {}
  rpc Update(Doctor) returns (google.protobuf.Empty) {}
  rpc Delete(DoctorId) returns (google.protobuf.Empty) {}
}

message Doctor {
  string doctor_id = 1;
  string name = 2;
  int32 age = 3;
  string role = 4;
  string polyclinic = 5;
  int32 gender = 6;
}

message GetListDoctorsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetListDoctorsResponse {
  repeated Doctor doctors = 1;
  int32 count = 2;
}

message DoctorId {
  string doctor_id = 1;
}
