syntax="proto3";

package appointment_service;
option go_package="genproto/appointment_service";

import "google/protobuf/empty.proto";

service PatientService {
  rpc Create(Patient) returns (google.protobuf.Empty) {}
  rpc GetList(GetListPatientsRequest) returns (GetListPatientsResponse) {}
  rpc Get(PatientId) returns (Patient) {}
  rpc Update(Patient) returns (google.protobuf.Empty) {}
  rpc Delete(PatientId) returns (google.protobuf.Empty) {}
}

message Patient {
  string patient_id = 1;
  string name = 2;
  int32 age = 3;
  int32 gender = 4;
  string login = 5;
  string password = 6;
  string access_token = 7;
  string refresh_token = 8;
}

message GetListPatientsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetListPatientsResponse {
  repeated Patient patients = 1;
  int32 count = 2;
}

message PatientId {
  string patient_id = 1;
}
